Add fatjar task, langs changens
Deleted javafx plugin
Added task for fatjar compilation
Refactor and fixes langs
Other small changens